# PPP-NLP-ML

./: .gitignore  .travis.yml  README.md  README.txt  dependency  get_dependencies.sh
learningintegration/: composer.json  instanceofextractor.php  test.php
reformulation/: CMakeLists.txt  libphprefor.ini  reformulation.sln
reformulation/reformulation/: .kdev_include_paths  Dictionary.cpp  Dictionary.h  Functions.cpp  Functions.h  Makefile  ReadMe.txt  Request.cpp  Request.h  SemanticNorm.cpp  SemanticNorm.h  Trainer.cpp  Trainer.h  Transformator.cpp  Transformator.h  definitions.h  phpext.cpp  pyext.cpp  reformulation.cpp  reformulation.h  reformulation.vcxproj  reformulation.vcxproj.filters  stats.txt  stdafx.cpp
